Update config files

--- a/configs/IRAS_181622048.cfg
+++ b/configs/IRAS_181622048.cfg
@@ -3,7 +3,8 @@ name = IRAS_181622048
 ra = 18h19m12.095s
 dec = -20d47m30.9602s
 frame = icrs
-basedir = /home/myso/share/binary_project/IRAS_18089/IRAS_181622048
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
 distance = 1.7 kpc
 vlsr = 12.0 km/s
 
@@ -95,3 +96,12 @@ ra = 18h19m12.0642s
 dec = -20d47m27.58s
 frame = icrs
 
+[b6_c8_continuum]
+type = fits_file
+file = ${sourcedata}/continuum/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
+[b6_c5c8_spw3_nocontsub]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/no_contsub/IRAS_181622048_spw3.image.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN
