--- a/configs/NGC6334I.cfg
+++ b/configs/NGC6334I.cfg
@@ -204,9 +204,15 @@ frame = icrs
 type = fits_file
 file = ${sourcedata}/continuum/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
-[b6_c5c8_spw0_1000]
+#[b6_c5c8_spw0_1000]
+#type = spectral_cube
+#file = ${cubesdir}/c5c8_CH3OH/NGC6334I_spw0_0-1000.image.fits
+#rms = 1.8 mJy/beam
+#molecules = CH3OH
+
+[b6_c5c8_spw0_1000_nocontsub]
 type = spectral_cube
-file = ${cubesdir}/c5c8_CH3OH/NGC6334I_spw0_0-1000.image.fits
+file = ${cubesdir}/c5c8_CH3OH/no_contsub/NGC6334I_spw0_0-1000.image.fits
 rms = 1.8 mJy/beam
 molecules = CH3OH
 
