--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -253,7 +253,7 @@ paval = 95
 pvmap = ${results}/${name}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
 pvnoise = 2.5 mJy/beam
 pvnsigma = 5
-nplot = 6
+#nplot = 6
 
 [G35.20-0.74_N_alma1]
 name = G35.20-0.74_N
@@ -276,7 +276,7 @@ pvmap = ${results}/${name}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${
 pvnoise = 2.5 mJy/beam
 pvnsigma = 3
 xlim = -0.35 0.5 arcsec
-nplot = 11
+#nplot = 11
 
 [IRAS_165623959_alma1]
 name = IRAS_165623959
@@ -287,7 +287,7 @@ paval = 10
 pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
 pvnoise = 1.4 mJy/beam
 pvnsigma = 6
-nplot = 7
+#nplot = 7
 
 [IRAS_165623959_alma2]
 name = IRAS_165623959
@@ -386,7 +386,7 @@ vlsr = -3.9 km/s
 paval = -55
 pvmap = ${results}/${name}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
 pvnoise = 1.5 mJy/beam
-nplot = 9
+#nplot = 9
 
 [NGC_6334_I_N_alma4]
 name = NGC_6334_I_N
