--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -98,7 +98,7 @@ source = G10.62-0.38
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1c_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 1.35 km/s
-label = ${source} ALMA1c CH$$_3$$OH
+label = ${source} ALMA1c CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
