--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -67,11 +67,11 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 21.554797281928437 solMass
-model_amplitude = -13.828181856164457
+model_mass = 15.839053466606627 solMass
+model_amplitude = -11.853803492250195
 model_x_0 = 0.020202020202020204
 model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_sd_mass = 3.085026468706788 solMass
 model_vsys = -2.295489254670895
 model_offset0 = 0.08200997056659148
@@ -90,10 +90,10 @@ yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -13.828181856164457
+model_amplitude = -35.68181659376357
 model_x_0 = 0.020202020202020204
-model_alpha = 0.5000242270912352
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_alpha = 1.1449003000946247
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = -2.295489254670895
 model_offset0 = 0.08200997056659148
 model_sd_amplitude = 24.664233655308102
@@ -161,15 +161,15 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 5.229163542753293 solMass
-model_amplitude = -6.810974013979289
+model_mass = 4.960438860257873 solMass
+model_amplitude = -6.633659282336722
 model_x_0 = 0.020202020202020204
 model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_sd_mass = 0.6582445165341323 solMass
-model_vsys = -1.6140784249251272
-model_offset0 = -0.002761738692654008
-model_sd_amplitude = 0.3299618388504962
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.7494661142470503 solMass
+model_vsys = -2.1787701537532964
+model_offset0 = 0.04048023986295073
+model_sd_amplitude = 0.5011353819320455
 model_sd_x_0 = 0.0
 model_sd_alpha = 0.0
 model_sd_vsys = 0.0
@@ -184,17 +184,17 @@ yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -8.956302212877516
+model_amplitude = -13.704302450045676
 model_x_0 = 0.020202020202020204
-model_alpha = 0.698796213877995
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_vsys = -1.6140784249251272
-model_offset0 = -0.002761738692654008
-model_sd_amplitude = 0.7304920624399526
+model_alpha = 0.9717888344142968
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -2.1787701537532964
+model_offset0 = 0.04048023986295073
+model_sd_amplitude = 4.090833819378334
 model_sd_x_0 = 0.0
-model_sd_alpha = 0.06683042843576836
-model_sd_vsys = 0.24946344010020666
-model_sd_offset0 = 0.007629930727609631
+model_sd_alpha = 0.19389828291200667
+model_sd_vsys = 0.28679397775847
+model_sd_offset0 = 0.008807836438302467
 model_info = 1
 
 [G10_alma1c_pvmap_out]
