--- a/configs/plots/papers/group_pv_maps.10.cfg
+++ b/configs/plots/papers/group_pv_maps.10.cfg
@@ -146,8 +146,6 @@ model_mass = 9.996699492902263 solMass
 model_amplitude = -9.417192098531983
 model_x_0 = 0.07407407407407407
 model_alpha = 0.5
-model_cons = -3.7550129036241007
-model_x_mid = -0.03516701662979031
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_sd_mass = 0.4819804276510245 solMass
 model_vsys = -3.714491730229512
@@ -170,8 +168,6 @@ color = #adacac
 model_amplitude = -9.089962731920929
 model_x_0 = 0.07407407407407407
 model_alpha = 0.4422619666619437
-model_cons = -3.7550129036241007
-model_x_mid = -0.03516701662979031
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = -3.714491730229512
 model_offset0 = -0.033134059487579144
@@ -249,13 +245,11 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 16.794164217275675 solMass
-model_amplitude = -12.205970295986086
+model_mass = 17.755709293503035 solMass
+model_amplitude = -12.550531669822306
 model_x_0 = 0.039525691699604744
 model_alpha = 0.5
-model_cons = 37.34462684347312
-model_x_mid = 0.010972498082433075
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_sd_mass = 1.4466281877043492 solMass
 model_vsys = 37.28539294186246
 model_offset0 = 0.01622876626201136
@@ -274,12 +268,10 @@ yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -11.990021171939885
+model_amplitude = -12.987044013188374
 model_x_0 = 0.039525691699604744
-model_alpha = 0.4673441509801685
-model_cons = 37.34462684347312
-model_x_mid = 0.010972498082433075
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
+model_alpha = 0.5281034315022166
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = 37.28539294186246
 model_offset0 = 0.01622876626201136
 model_sd_amplitude = 1.0756250852140001
