--- a/configs/plots/papers/group_pv_maps.6.cfg
+++ b/configs/plots/papers/group_pv_maps.6.cfg
@@ -271,6 +271,12 @@ xlim = -0.25 0.25 arcsec
 hlines = 35.53 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
+markers = 0.15 arcsec 39.5 km/s, -0.005 arcsec 30.2 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
 [G35.13_alma6_pvmap_out]
 loc = 3 1
@@ -282,56 +288,4 @@ xlim = -0.25 0.25 arcsec
 hlines = 35.53 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
-
-[G35.13-0.74_alma6_pvedge]
-loc = 3 0
-structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma6_pvmaps/G35.13-0.74_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA95.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G35.13-0.74_alma6_keplerian_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.48749999999998506 0.48749999999998506 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 3.2398143545501514 solMass
-model_amplitude = -5.361090932905144
-model_x_0 = 0.045454545454545456
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.49410070328574995 solMass
-model_vsys = 35.96755023815543
-model_offset0 = 0.045025938468959525
-model_sd_amplitude = 0.40880718930808796
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G35.13-0.74_alma6_unrestricted_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.48749999999998506 0.48749999999998506 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -8.079344409190194
-model_x_0 = 0.045454545454545456
-model_alpha = 1.0247278180427397
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 35.96755023815543
-model_offset0 = 0.045025938468959525
-model_sd_amplitude = 197.4735722976387
-model_sd_x_0 = 0.0
-model_sd_alpha = 30.405386233395056
-model_sd_vsys = 51.76952254526612
-model_sd_offset0 = 1.4462354273039282
-model_info = 1
 
