--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -72,8 +72,6 @@ model_mass = 17.27677520629488 solMass
 model_amplitude = -12.380108539151216
 model_x_0 = 0.027932960893854747
 model_alpha = 0.5
-model_cons = 59.94393380781876
-model_x_mid = -0.050224147503313124
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_sd_mass = 1.2395565287567358 solMass
 model_vsys = 60.16600044882333
@@ -96,8 +94,6 @@ color = #adacac
 model_amplitude = -17.164808842139003
 model_x_0 = 0.027932960893854747
 model_alpha = 0.7093529553250641
-model_cons = 59.94393380781876
-model_x_mid = -0.050224147503313124
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = 60.16600044882333
 model_offset0 = -0.05398330020586529
@@ -176,17 +172,15 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 13.314763027706906 solMass
-model_amplitude = -10.868255301361478
+model_mass = 13.337614785650759 solMass
+model_amplitude = -10.877577745457856
 model_x_0 = 0.07407407407407407
 model_alpha = 0.5
-model_cons = -3.3092519025572855
-model_x_mid = 0.09076994448023944
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_sd_mass = 0.8787479308008161 solMass
-model_vsys = -2.6297957890669053
-model_offset0 = -0.007751286765646641
-model_sd_amplitude = 0.45490627902766256
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.1603983092300938 solMass
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_sd_amplitude = 0.47318516193494686
 model_sd_x_0 = 0.0
 model_sd_alpha = 0.0
 model_sd_vsys = 0.0
@@ -201,19 +195,17 @@ yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -11.74036673400669
+model_amplitude = -12.840238346315473
 model_x_0 = 0.07407407407407407
-model_alpha = 0.5618892355447928
-model_cons = -3.3092519025572855
-model_x_mid = 0.09076994448023944
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_vsys = -2.6297957890669053
-model_offset0 = -0.007751286765646641
-model_sd_amplitude = 0.39917798810806226
+model_alpha = 0.6248669691717006
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_sd_amplitude = 3.0377131725154056
 model_sd_x_0 = 0.0
-model_sd_alpha = 0.04305387568009426
-model_sd_vsys = 0.3070006005222056
-model_sd_offset0 = 0.006932888523648618
+model_sd_alpha = 0.16559322662840853
+model_sd_vsys = 0.5354536693652747
+model_sd_offset0 = 0.042932826214817706
 model_info = 1
 
 [NGC6334IN_alma1_pvmap_out]
@@ -257,43 +249,4 @@ ylim = -15 10 km/s
 hlines = -3.9 km/s
 rms = 1.5 mJy/beam
 vmax = 16 mJy/beam
-
-[NGC_6334_I_N_alma2_pvedge]
-loc = 3 0
-structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma2_pvmaps/NGC_6334_I_N_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA-55.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC_6334_I_N_alma2_keplerian_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 1.7369217645337192 solMass
-model_amplitude = -3.9253938665973775
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-model_cons = -5.535415394689714
-model_x_mid = -0.04322151296390041
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-
-[NGC_6334_I_N_alma2_unrestricted_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -5.053612623149221
-model_x_0 = 0.07407407407407407
-model_alpha = 0.9629739489632971
-model_cons = -5.535415394689714
-model_x_mid = -0.04322151296390041
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
 
