--- a/configs/G5.89-0.37.cfg
+++ b/configs/G5.89-0.37.cfg
@@ -3,10 +3,9 @@ name = G5.89-0.37
 ra = 18h00m30.4581s
 dec = -24d04m00.9891s
 frame = icrs
-basedir = /home/myso/share/binary_project/IRAS_18089/G5.89-0.37
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-cubesdir = /Volumes/Pegasus32 R8/dihca/source_data/clean_cubes/
-distance = 3.0 kpc
+sourcedata = ../source_data
+cubesdir = ../source_data/clean_cubes/
+distance = 2.99 kpc
 vlsr = 10.0 km/s
 
 [ALMA1]
@@ -195,3 +194,8 @@ file = ${cubesdir}/c5c8_CH3OH/G5.89-0.37_spw0_0-1000.image.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/G5.89-0.37_spw3.image.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
