--- a/configs/NGC_6334_I_N.cfg
+++ b/configs/NGC_6334_I_N.cfg
@@ -312,8 +312,8 @@ file = ${cubesdir}/c5c8_CH3OH/no_contsub/NGC_6334_I_N_spw0_0-1000.image.fits
 rms = 1.6 mJy/beam
 molecules = CH3OH
 
-#[b6_c5c8_spw3_nocontsub]
-#type = spectral_cube
-#file = ${cubesdir}/c5c8_spw3/no_contsub/NGC_6334_I_N_spw3.image.fits
-#rms = 1.5 mJy/beam
-#molecules = CH3CN
+[b6_c5c8_spw3_nocontsub]
+type = spectral_cube
+file = ${cubesdir}/c5c8_spw3/no_contsub/NGC_6334_I_N_spw3.image.fits
+rms = 1.5 mJy/beam
+molecules = CH3CN
