--- a/configs/W33A.cfg
+++ b/configs/W33A.cfg
@@ -224,5 +224,5 @@ molecules = CH3OH
 [b6_c5c8_spw3_nocontsub]
 type = spectral_cube
 file = ${cubesdir}/c5c8_spw3/no_contsub/W33A_spw3.image.fits
-#rms = 1.2 mJy/beam
+rms = 1.8 mJy/beam
 molecules = CH3CN
