--- a/configs/extracted/G14.22-0.50_S_alma2.cfg
+++ b/configs/extracted/G14.22-0.50_S_alma2.cfg
@@ -1,13 +1,13 @@
 [INFO]
 name = G14.22-0.50_S
-ra = 18h18m12.86247s
-dec = -16d57m20.3666s
+ra = 18h18m13.34872s
+dec = -16d57m23.9282s
 frame = icrs
-distance = 2.0 kpc
-vlsr = 22.0 km/s
+distance = 1.9 kpc
+vlsr = 22.7 km/s
 radius = 0.0525 arcsec
-sourcedata = /Volumes/Pegasus32 R8/dihca/source_data
-subcubes = /Volumes/Pegasus32 R8/dihca/results/${name}/c5c8/per_hot_core/
+sourcedata = ../source_data
+subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
@@ -15,49 +15,49 @@ file = ${sourcedata}/continuum/G14.22-0.50_S.config8.cont_avg.selfcal_0.5_hogbom
 
 [b6_c5c8_spw0_1000]
 type = spectral_cube
-file = ${subcubes}/spw0_from_CH3OH.structure2.subcube.fits
+file = ${subcubes}/spw0_from_CH3OH.structure1.subcube.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
 [b6_c5c8_spw3]
 type = spectral_cube
-file = ${subcubes}/spw3_from_CH3CN.structure2.subcube.fits
+file = ${subcubes}/spw3_from_CH3CN.structure1.subcube.fits
 rms = 1.6 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
-file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/alma2_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
 type = spectral_cube
-file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc2_CH3CN_12_2_-11_2__nchans40.fits
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/alma2_CH3CN_12_2_-11_2__nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_3_-11_3_]
 type = spectral_cube
-file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc2_CH3CN_12_3_-11_3__nchans40.fits
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/alma2_CH3CN_12_3_-11_3__nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_4_-11_4_]
 type = spectral_cube
-file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc2_CH3CN_12_4_-11_4__nchans40.fits
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/alma2_CH3CN_12_4_-11_4__nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_8_-11_8_]
 type = spectral_cube
-file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/hmc2_CH3CN_12_8_-11_8__nchans40.fits
+file = ../results/G14.22-0.50_S/c5c8/per_hot_core/line_cubes/alma2_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.6 mJy/beam
 molecules = CH3CN
 chan_width = 488 kHz
