--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 3
-nrows = 2
+nrows = 3
 sharex = false 
 sharey = false
 styles = maps vik
@@ -173,7 +173,7 @@ vmax = 3 km/s
 # Recenter
 center = 18h58m13.03690s +01d40m35.9257s icrs
 # Artists
-scale = 18h58m12.922s +01d40m37.0s icrs
+scale = 18h58m13.008s +01d40m35.5s icrs
 scale_distance = 2.19 kpc
 arrows_pa = -23 deg
 
@@ -184,3 +184,28 @@ ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
+[IRAS18162_alma1_moment1]
+loc = 2 0
+source = IRAS_181622048
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+#shift_data = -45.69 km/s
+shift_data = -47 km/s
+label = IRAS 18162-2048 ALMA1 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vcenter = 0 km/s
+vmax = 10 km/s
+# Recenter
+center = 18h19m12.0956s -20d47m30.946s icrs
+# Artists
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 2.19 kpc
+arrows_pa = -70 deg
+
+[IRAS18162_continuum]
+loc = 2 0
+contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
