--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -68,17 +68,15 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 4.690400785298091 solMass
-model_amplitude = -6.450569932851174
+model_mass = 3.87439880274262 solMass
+model_amplitude = -5.86266760723382
 model_x_0 = 0.045662100456621
 model_alpha = 0.5
-model_cons = 31.439426041696777
-model_x_mid = -0.013398523400697835
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_sd_mass = 1.1409859498731734 solMass
-model_vsys = 32.078049620159284
-model_offset0 = 0.010738472822581564
-model_sd_amplitude = 0.6242694920428646
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.8119671605894117 solMass
+model_vsys = 31.789021824430836
+model_offset0 = -0.03433463506282461
+model_sd_amplitude = 0.6143267398228901
 model_sd_x_0 = 0.0
 model_sd_alpha = 0.0
 model_sd_vsys = 0.0
@@ -93,19 +91,17 @@ yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -10.10433339912845
+model_amplitude = -14.54962691386968
 model_x_0 = 0.045662100456621
-model_alpha = 0.8797758199214607
-model_cons = 31.439426041696777
-model_x_mid = -0.013398523400697835
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_cons} ${model_x_mid}
-model_vsys = 32.078049620159284
-model_offset0 = 0.010738472822581564
-model_sd_amplitude = 3.5340477439237565
+model_alpha = 1.1447219169301803
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 31.789021824430836
+model_offset0 = -0.03433463506282461
+model_sd_amplitude = 5.296590707649587
 model_sd_x_0 = 0.0
-model_sd_alpha = 0.18507297738554357
-model_sd_vsys = 0.3824613795865504
-model_sd_offset0 = 0.029737959955569472
+model_sd_alpha = 0.23291191336427927
+model_sd_vsys = 0.2735193376726168
+model_sd_offset0 = 0.019760674230149263
 model_info = 1
 
 [G35.20_alma1_pvmap_out]
@@ -190,3 +186,4 @@ xlim = -0.25 0.25 arcsec
 hlines = -11.65 km/s
 rms = 1.4 mJy/beam
 vmax = 20 mJy/beam
+
