Update config files

--- a/configs/IRAS_181622048.cfg
+++ b/configs/IRAS_181622048.cfg
@@ -100,6 +100,12 @@ frame = icrs
 type = fits_file
 file = ${sourcedata}/continuum/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
+[b6_c5c8_spw0_1000_nocontsub]
+type = spectral_cube
+file = ${cubesdir}/c5c8_CH3OH/no_contsub/IRAS_181622048_spw0_0-1000.image.fits
+rms = 1.1 mJy/beam
+molecules = CH3OH
+
 [b6_c5c8_spw3_nocontsub]
 type = spectral_cube
 file = ${cubesdir}/c5c8_spw3/no_contsub/IRAS_181622048_spw3.image.fits
