--- a/configs/extracted/NGC6334I_alma1.cfg
+++ b/configs/extracted/NGC6334I_alma1.cfg
@@ -1,18 +1,26 @@
 [INFO]
 name = NGC6334I
 alma = 1
-ra = 17h20m53.41856s
-dec = -35d46m57.8989s
+# From ellipse in the continuum
+ra = 17h20m53.41869s
+dec = -35d46m57.8969s
 frame = icrs
 distance = 1.35 kpc
 vlsr = -8.0 km/s
-radius = 0.063 arcsec
+radius = 0.067 arcsec
 sourcedata = ../source_data
 subcubes = ../results/${name}/c5c8/per_hot_core/
 
 [b6_c8_continuum]
 type = fits_file
 file = ${sourcedata}/continuum/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${subcubes}/spw0_from_CH3OH.structure19.subcube.contsub.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
+chan_width = 488 kHz
 
 [b6_c5c8_spw3]
 type = spectral_cube
@@ -47,5 +55,12 @@ type = spectral_cube
 file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.9 mJy/beam
 molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+rms = 1.7 mJy/beam
+molecules = CH3OH
 chan_width = 488 kHz
 
