--- a/configs/extracted/pvmaps/IRAS_181622048_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_181622048_alma1_rotation.cfg
@@ -32,3 +32,13 @@ source_section = b6_c5c8_spw3
 length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
+
+[c-HCOOH_spw3]
+molecule = c-HCOOH
+qns = 10(4,6)-9(4,5)
+line_lists = CDMS
+restore_molecule = ${moldir}/c-hcooh.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
