--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -72,6 +72,17 @@ pvnoise = 1.1 mJy/beam
 pvnsigma = 4
 nplot = 2
 
+[G14.22-0.50_S_alma1]
+name = G14.22-0.50_S
+alma = 1
+distance = 1.9 kpc
+vlsr = 19.61 km/s
+paval = 170
+pvmap = ${results}/${name}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+pvnsigma = 3
+nplot = 11
+
 [G29.96-0.02_alma1]
 name = G29.96-0.02
 alma = 1
@@ -93,6 +104,19 @@ paval = 135
 pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
 pvnoise = 1.8 mJy/beam
 nplot = 3
+
+[G333.12-0.56_alma1_ch3cn]
+name = G333.12-0.56
+alma = 1
+distance = 3.3 kpc
+vlsr = -58.47 km/s
+paval = 135
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra245.39740_dec-50.68239.PA${paval}.fits
+pvnoise = 1.8 mJy/beam
+nplot = 13
+#ylim = -75 -60 -55 -48 km/s
+ylim = -75 -60 -55 -45 km/s
+#xlim = -0.3 0.20 arcsec
 
 [G333.12-0.56_alma2]
 name = G333.12-0.56
@@ -124,6 +148,16 @@ paval = 130
 pvmap = ${results}/${name}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
 pvnoise = 1.9 mJy/beam
 #nplot = 3
+
+[G333.46-0.16_alma1_ch3cn]
+name = G333.46-0.16
+alma = 1
+distance = 2.9 kpc
+vlsr = -43.55 km/s
+paval = 130
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra245.33407_dec-50.16288.PA${paval}.fits
+pvnoise = 1.9 mJy/beam
+#nplot = 13
 
 [G333.46-0.16_alma7]
 name = G333.46-0.16
@@ -278,6 +312,18 @@ pvnsigma = 3
 xlim = -0.35 0.5 arcsec
 #nplot = 11
 
+[G5.89-0.37_alma14]
+name = G5.89-0.37
+alma = 14
+distance = 2.99 kpc
+vlsr = 7.92 km/s
+paval = -30
+pvmap = ${results}/${name}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA${paval}.fits
+pvnoise = 1.8 mJy/beam
+pvnsigma = 6
+#xlim = -0.35 0.5 arcsec
+nplot = 12
+
 [IRAS_165623959_alma1]
 name = IRAS_165623959
 alma = 1
@@ -324,6 +370,30 @@ pvnoise = 1.6 mJy/beam
 pvnsigma = 4
 nplot = 8
 
+[IRAS_181622048_alma1]
+name = IRAS_181622048
+alma = 1
+distance = 1.30 kpc
+vlsr = 47 km/s
+paval = -70
+pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra274.80040_dec-20.79193.PA${paval}.fits
+pvnoise = 1.2 mJy/beam
+pvnsigma = 5
+#nplot = 11
+
+[IRAS_181622048_alma1_c-hcooh]
+name = IRAS_181622048
+alma = 1
+distance = 1.30 kpc
+vlsr = 47 km/s
+paval = -70
+pvmap = ${results}/${name}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
+pvnoise = 1.2 mJy/beam
+pvnsigma = 5
+ncomponents = 2 
+xlim = -0.4 0.4 arcsec
+nplot = 11
+
 [IRAS_18182-1433_alma1]
 name = IRAS_18182-1433
 alma = 1
@@ -367,6 +437,16 @@ pvmap = ${results}/${name}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${
 pvnoise = 1.4 mJy/beam
 pvnsigma = 6
 #nplot = 9
+
+[NGC6334I_alma8]
+name = NGC6334I
+alma = 8
+distance = 1.35 kpc
+vlsr = -4.7 km/s
+paval = 50
+pvmap = ${results}/${name}_alma8_rotation.CH3OH_spw0.ra260.22352_dec-35.78191.PA${paval}.fits
+pvnoise = 1.5 mJy/beam
+#nplot = 12
 
 [NGC_6334_I_N_alma1]
 name = NGC_6334_I_N
