--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 2
-nrows = 2
+nrows = 4
 sharex = false
 sharey = false
 styles = maps inferno aspect_auto
@@ -36,6 +36,7 @@ vlines_linestyle = :
 vlines_color = #35ff2c
 hlines_linestyle = --
 hlines_color = #35ff2c
+markers_mfc = #46eff2
 self_contours = true
 vmin = 0. mJy/beam
 basedir = ..
@@ -72,6 +73,7 @@ loc = 1 0
 source = G35.20-0.74_N
 alma = 2
 paval = -23
+label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 ylim = 20 40 km/s
@@ -89,10 +91,121 @@ loc = 1 1
 source = G35.20-0.74_N
 alma = 2
 paval = 67
+label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
 xlim = -0.48 0.48 arcsec
 ylim = 20 40 km/s
 hlines = 30.0 km/s
 rms = 2.5 mJy/beam
 vmax = 60 mJy/beam
+
+[IRAS_181622048_alma1_pvmap_rot]
+loc = 2 0
+source = IRAS_181622048
+alma = 1
+paval = -70
+label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
+#xlim = -0.9 0.45 arcsec
+hlines = 47.0 km/s
+rms = 1.2 mJy/beam
+vmax = 16 mJy/beam
+markers = -0.14 arcsec 46.2 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_ms = 10
+
+[IRAS_181622048_alma1_pvmap_out]
+loc = 2 1
+source = IRAS_181622048
+alma = 1
+paval = 20
+label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra274.80040_dec-20.79193.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 47.0 km/s
+rms = 1.2 mJy/beam
+vmax = 16 mJy/beam
+
+[IRAS_181622048_alma1_pvedge]
+loc = 2 0
+structured_array = ../results/IRAS_181622048/c5c8/per_hot_core/alma1_pvmaps/IRAS_181622048_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA-70.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G14.22-0.50_S_alma1_pvmap_rot]
+loc = 3 0
+source = G14.22-0.50_S
+alma = 1
+paval = 170
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
+xlim = -0.1 0.1 arcsec
+ylim = 10 30 km/s
+hlines = 19.61 km/s
+rms = 1.3 mJy/beam
+vmax = 15 mJy/beam
+markers = -0.048 arcsec 15.7 km/s, 0.045 arcsec 23.9 km/s
+markers_physframe = data
+markers_marker = ^, v
+markers_mec = #46eff2
+markers_ms = 10
+
+[G14.22-0.50_S_alma1_pvmap_out]
+loc = 3 1
+source = G14.22-0.50_S
+alma = 1
+paval = 260
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
+xlim = -0.1 0.1 arcsec
+ylim = 10 30 km/s
+hlines = 19.61 km/s
+rms = 1.3 mJy/beam
+vmax = 15 mJy/beam
+
+[IRAS_181622048_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.908809183989916 solMass
+model_sd_mass = 0.6343612374554848 solMass
+model_amplitude = -10.278441756673729
+model_x_0 = 0.07692307692307693
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_sd_amplitude = 0.27375722169784306
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[IRAS_181622048_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -8.75981717721464
+model_x_0 = 0.07692307692307693
+model_alpha = 0.3411014797047861
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_sd_amplitude = 0.8159691253402466
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.09069767258886366
+model_sd_vsys = 0.4422981025697157
+model_sd_offset0 = 0.03975000575012083
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
