--- a/configs/extracted/G5.89-0.37_alma14.cfg
+++ b/configs/extracted/G5.89-0.37_alma14.cfg
@@ -1,7 +1,7 @@
 [INFO]
 name = G5.89-0.37
-ra = 18h00m30.6326s
-dec = -24d04m03.039s
+ra = 18h00m30.63209s
+dec = -24d04m03.0057s
 frame = icrs
 distance = 2.99 kpc
 vlsr = 7.92 km/s
@@ -20,10 +20,45 @@ rms = 1.5 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
 
+[b6_c5c8_spw3]
+type = spectral_cube
+file = ${subcubes}/spw3_from_CH3CN.structure203.subcube.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
 type = spectral_cube
 file = ../results/G5.89-0.37/c5c8/per_hot_core/line_cubes/alma14_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.5 mJy/beam
 molecules = CH3OH
 chan_width = 976 kHz
+
+[b6_c5c8_spw3_CH3CN_12_2_-11_2_]
+type = spectral_cube
+file = ../results/G5.89-0.37/c5c8/per_hot_core/line_cubes/alma14_CH3CN_12_2_-11_2__nchans40.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_3_-11_3_]
+type = spectral_cube
+file = ../results/G5.89-0.37/c5c8/per_hot_core/line_cubes/alma14_CH3CN_12_3_-11_3__nchans40.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_4_-11_4_]
+type = spectral_cube
+file = ../results/G5.89-0.37/c5c8/per_hot_core/line_cubes/alma14_CH3CN_12_4_-11_4__nchans40.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH3CN_12_8_-11_8_]
+type = spectral_cube
+file = ../results/G5.89-0.37/c5c8/per_hot_core/line_cubes/alma14_CH3CN_12_8_-11_8__nchans40.fits
+rms = 1.7 mJy/beam
+molecules = CH3CN
+chan_width = 488 kHz
 
