--- a/configs/extracted/IRAS_181622048_alma1.cfg
+++ b/configs/extracted/IRAS_181622048_alma1.cfg
@@ -1,8 +1,8 @@
 [INFO]
 name = IRAS_181622048
 alma = 1
-ra = 18h19m12.0956s
-dec = -20d47m30.946s
+ra = 18h19m12.09528s
+dec = -20d47m30.9566s
 frame = icrs
 distance = 1.30 kpc
 vlsr = 45.69 km/s
@@ -14,11 +14,18 @@ subcubes = ../results/${name}/c5c8/per_hot_core/
 type = fits_file
 file = ${sourcedata}/continuum/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 
+[b6_c5c8_spw0_1000]
+type = spectral_cube
+file = ${subcubes}/spw0_from_CH3OH.structure2.subcube.contsub.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH
+chan_width = 976 kHz
+
 [b6_c5c8_spw3]
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure120.subcube.contsub.fits
 rms = 1.4 mJy/beam
-molecules = CH3CN
+molecules = CH3CN c-HCOOH
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
@@ -47,5 +54,19 @@ type = spectral_cube
 file = ../results/IRAS_181622048/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.4 mJy/beam
 molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
+type = spectral_cube
+file = ../results/IRAS_181622048/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+rms = 1.5 mJy/beam
+molecules = CH3OH
+chan_width = 976 kHz
+
+[b6_c5c8_spw3_c-HCOOH_10_4_6_-9_4_5_]
+type = spectral_cube
+file = ../results/IRAS_181622048/c5c8/per_hot_core/line_cubes/alma1_c-HCOOH_10_4_6_-9_4_5__nchans40.fits
+rms = 1.4 mJy/beam
+molecules = CH3CN c-HCOOH
 chan_width = 488 kHz
 
