--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 ncols = 3
-nrows = 3
+nrows = 4
 sharex = false 
 sharey = false
 styles = maps vik
@@ -200,12 +200,122 @@ vmax = 10 km/s
 center = 18h19m12.0956s -20d47m30.946s icrs
 # Artists
 scale = 18h19m12.065s -20d47m31.4s icrs
-scale_distance = 2.19 kpc
+scale_distance = 1.30 kpc
 arrows_pa = -70 deg
 
 [IRAS18162_continuum]
 loc = 2 0
 contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G5.89-0.37_alma14_moment1]
+loc = 2 1
+source = G5.89-0.37
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -7.92 km/s
+label = G5.89-0.37 ALMA14 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h00m30.63209s -24d04m03.0057s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 2.99 kpc
+arrows_pa = -30 deg
+
+[G5.89-0.37_continuum]
+loc = 2 1
+contour = ${contdir}/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G14.22-0.50_S_alma1_moment1]
+loc = 2 2
+source = G14.22-0.50_S
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = -19.61 km/s
+label = G14.22-0.50 S ALMA1 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h18m12.86247s -16d57m20.3666s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 1.90 kpc
+arrows_pa = 170 deg
+
+[G14.22-0.50_S_continuum]
+loc = 2 2
+contour = ${contdir}/G14.22-0.50_S.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[NGC6334I_alma1_moment1]
+loc = 3 0
+source = NGC6334I
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 8.0 km/s
+label = NGC 6334I ALMA1 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 17h20m53.41869s -35d46m57.8969s icrs
+# Artists
+scale = 17h20m53.38s -35d46m58.3s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 60 deg
+
+[NGC6334I_alma4_moment1]
+loc = 3 1
+source = NGC6334I
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 10.7 km/s
+label = NGC 6334I ALMA4 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 17h20m53.18700s -35d46m59.3280s icrs
+radius = 0.7 arcsec
+# Artists
+scale = 17h20m53.14s -35d46m59.9s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 40 deg
+
+[NGC6334I_alma8_moment1]
+loc = 3 2
+source = NGC6334I
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 4.7 km/s
+label = NGC 6334I ALMA8 CH$$_3$$OH
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 17h20m53.64398s -35d46m54.8823s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 17h20m53.622s -35d46m55.1s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 50 deg
+
+[NGC6334I_continuum]
+loc = 3 0, 3 1, 3 2
+contour = ${contdir}/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
