Update plot configs

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -302,9 +302,11 @@ beam_zorder = 5
 loc = 3 2
 source = G333.46-0.16
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+image = ${results}/HNCO_10_0_10_-9_0_9__width30.subcube.moment1.fits
 shift_data = 43.55 km/s
-label = ${source} ALMA1 CH$$_3$$OH
+#label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMA1 HNCO
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
