--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -188,16 +188,15 @@ beam_zorder = 5
 loc = 2 0
 source = IRAS_181622048
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-#shift_data = -45.69 km/s
-shift_data = -47 km/s
-label = IRAS 18162-2048 ALMA1 CH$$_3$$CN
+image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
+shift_data = -45.69 km/s
+label = IRAS 18162-2048 ALMA1 c-HCOOH
 # Range
 vmin = -6 km/s
 vcenter = 0 km/s
 vmax = 10 km/s
 # Recenter
-center = 18h19m12.0956s -20d47m30.946s icrs
+center = 18h19m12.09528s -20d47m30.9566s icrs
 # Artists
 scale = 18h19m12.065s -20d47m31.4s icrs
 scale_distance = 1.30 kpc
@@ -224,7 +223,7 @@ vmax = 6 km/s
 center = 18h00m30.63209s -24d04m03.0057s icrs
 radius = 0.3 arcsec
 # Artists
-scale = 18h19m12.065s -20d47m31.4s icrs
+scale = 18h00m30.614s -24d04m03.22s icrs
 scale_distance = 2.99 kpc
 arrows_pa = -30 deg
 
@@ -264,9 +263,11 @@ beam_zorder = 5
 loc = 3 0
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 shift_data = 8.0 km/s
-label = NGC 6334I ALMA1 CH$$_3$$OH
+#label = NGC 6334I ALMA1 CH$$_3$$OH
+label = NGC 6334I ALMA1 HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -281,19 +282,23 @@ arrows_pa = 60 deg
 loc = 3 1
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 10.7 km/s
-label = NGC 6334I ALMA4 CH$$_3$$OH
+#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
+#shift_data = 10.7 km/s
+shift_data = 6.92 km/s
+#label = NGC 6334I ALMA4 CH$$_3$$OH
+label = NGC 6334I ALMA4 HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
 # Recenter
-center = 17h20m53.18700s -35d46m59.3280s icrs
+#center = 17h20m53.18700s -35d46m59.3280s icrs
+center = 17h20m53.16652s -35d46m59.1704s icrs
 radius = 0.7 arcsec
 # Artists
-scale = 17h20m53.14s -35d46m59.9s icrs
+scale = 17h20m53.12s -35d46m59.8s icrs
 scale_distance = 1.35 kpc
-arrows_pa = 40 deg
+arrows_pa = 20 deg
 
 [NGC6334I_alma8_moment1]
 loc = 3 2
