--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -106,15 +106,15 @@ alma = 1
 paval = -70
 label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
-#xlim = -0.9 0.45 arcsec
+xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
-vmax = 16 mJy/beam
-markers = -0.14 arcsec 46.2 km/s
-markers_physframe = data
-markers_marker = ^
-markers_mec = #46eff2
-markers_ms = 10
+vmax = 30 mJy/beam
+#markers = -0.14 arcsec 46.2 km/s
+#markers_physframe = data
+#markers_marker = ^
+#markers_mec = #46eff2
+#markers_ms = 10
 
 [IRAS_181622048_alma1_pvmap_out]
 loc = 2 1
@@ -122,11 +122,11 @@ source = IRAS_181622048
 alma = 1
 paval = 20
 label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra274.80040_dec-20.79193.PA${paval}.fits
+pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
 xlim = -0.5 0.5 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
-vmax = 16 mJy/beam
+vmax = 30 mJy/beam
 
 [IRAS_181622048_alma1_pvedge]
 loc = 2 0
