--- a/configs/plots/papers/group_pv_maps.12.cfg
+++ b/configs/plots/papers/group_pv_maps.12.cfg
@@ -119,7 +119,7 @@ loc = 1 0
 source = NGC6334I
 alma = 1
 paval = 60
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22258_dec-35.78275.PA${paval}.fits
+pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
 hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
@@ -129,7 +129,7 @@ loc = 1 1
 source = NGC6334I
 alma = 1
 paval = 150
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22258_dec-35.78275.PA${paval}.fits
+pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
 hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
@@ -138,21 +138,21 @@ vmax = 45 mJy/beam
 loc = 2 0
 source = NGC6334I
 alma = 4
-paval = 40
-pvmap = ${results}/${source}_alma4_rotation.CH3OH_spw0.ra260.22161_dec-35.78315.PA${paval}.fits
-hlines = -10.7 km/s
+paval = 20
+pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
+hlines = -6.92 km/s
 rms = 1.5 mJy/beam
-vmax = 40 mJy/beam
+vmax = 50 mJy/beam
 
 [NGC6334I_alma4_pvmap_out]
 loc = 2 1
 source = NGC6334I
 alma = 4
-paval = 130
-pvmap = ${results}/${source}_alma4_rotation.CH3OH_spw0.ra260.22161_dec-35.78315.PA${paval}.fits
-hlines = -10.7 km/s
+paval = 110
+pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
+hlines = -6.92 km/s
 rms = 1.5 mJy/beam
-vmax = 40 mJy/beam
+vmax = 50 mJy/beam
 
 [NGC6334I_alma8_pvmap_rot]
 loc = 3 0
@@ -183,4 +183,108 @@ ylim = -12 2 km/s
 hlines = -4.7 km/s
 rms = 1.5 mJy/beam
 vmax = 15 mJy/beam
+
+[NGC6334I_alma1_pvedge]
+loc = 1 0
+structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma1_pvmaps/NGC6334I_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA60.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC6334I_alma1_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.67984271557738 solMass
+model_sd_mass = 0.8894660145924915 solMass
+model_amplitude = -8.775038665180102
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_sd_amplitude = 0.44961060500585176
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma1_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.661298770429125
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5745542962356066
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_sd_amplitude = 1.4539993643115503
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.09894119576073762
+model_sd_vsys = 0.3104210015818551
+model_sd_offset0 = 0.02896689871324351
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_pvedge]
+loc = 2 0
+structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma4_pvmaps/NGC6334I_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA20.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC6334I_alma4_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.321287015550672 solMass
+model_sd_mass = 1.2651733039128334 solMass
+model_amplitude = -8.059105246022634
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
+model_sd_amplitude = 0.696336913785424
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -23.753747130049224
+model_x_0 = 0.07407407407407407
+model_alpha = 1.3305393175883473
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
+model_sd_amplitude = 5.588260484571349
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.15263612206132474
+model_sd_vsys = 0.2024794157364633
+model_sd_offset0 = 0.01705269945191324
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
