--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -222,31 +222,80 @@ loc = 3 0
 source = G333.46-0.16
 alma = 1
 paval = 130
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
-xlim = -0.45 0.52 arcsec
-ylim = -30 -60 km/s
+pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
+xlim = -0.45 0.45 arcsec
+ylim = -60 -30 km/s
 hlines = -43.55 km/s
-rms = 1.9 mJy/beam
+rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
-markers = 0.33 arcsec -39.7 km/s, -0.19 arcsec -48.5 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
+#markers = 0.33 arcsec -39.7 km/s, -0.19 arcsec -48.5 km/s
+#markers_physframe = data
+#markers_marker = v, ^
+#markers_mec = #46eff2
+#markers_mfc = #46eff2
+#markers_ms = 10
 
 [G333.46_alma1_pvmap_out]
 loc = 3 1
 source = G333.46-0.16
 alma = 1
-#paval = 220
-#pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
-#xlim = -0.45 0.45 arcsec
-paval = 130
+paval = 220
 pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
-xlim = -0.45 0.52 arcsec
-ylim = -30 -60 km/s
+xlim = -0.45 0.45 arcsec
+ylim = -60 -30 km/s
 hlines = -43.55 km/s
-rms = 1.9 mJy/beam
+rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
+
+[G333.46-0.16_alma1_pvedge]
+loc = 3 0
+structured_array = ../results/G333.46-0.16/c5c8/per_hot_core/alma1_pvmaps/G333.46-0.16_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G333.46-0.16_alma1_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.40945722258099 solMass
+model_sd_mass = 0.5605674008863251 solMass
+model_amplitude = -6.927395072896697
+model_x_0 = 0.034482758620689655
+model_alpha = 0.5
+model_vsys = -43.61687521522653
+model_offset0 = 0.03230520378155113
+model_sd_amplitude = 0.3589335945495866
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[G333.46-0.16_alma1_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.66389486517509
+model_x_0 = 0.034482758620689655
+model_alpha = 0.7755267109594368
+model_vsys = -43.61687521522653
+model_offset0 = 0.03230520378155113
+model_sd_amplitude = 1.3560665444672595
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.10959043390924572
+model_sd_vsys = 0.24914878882138244
+model_sd_offset0 = 0.009008858464710811
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
