--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
-ncols = 2
-nrows = 1
+ncols = 1
+nrows = 3
 sharex = false
 sharey = false
 styles = maps inferno aspect_auto
@@ -29,7 +29,6 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
@@ -47,27 +46,11 @@ source = G333.12-0.56
 alma = 1
 paval = 135
 pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra245.39740_dec-50.68239.PA${paval}.fits
+label = ${source} ALMA${alma} CH$$_3$$CN
 xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
-
-[G333.46_alma1_pvmap_rot]
-loc = 0 1
-source = G333.46-0.16
-alma = 1
-paval = 130
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra245.33407_dec-50.16288.PA${paval}.fits
-xlim = -0.45 0.52 arcsec
-hlines = -43.55 km/s
-rms = 1.9 mJy/beam
-vmax = 45 mJy/beam
-markers = 0.33 arcsec -39.3 km/s, -0.21 arcsec -47.9 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
 
 [G333.12-0.56_alma1_pvedge]
 loc = 0 0
@@ -121,3 +104,61 @@ model_sd_offset0 = 0.009420132290984587
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
+[G333.46_alma1_pvmap_ch3oh]
+loc = 1 0
+source = G333.46-0.16
+alma = 1
+paval = 130
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.33407_dec-50.16288.PA${paval}.fits
+label = ${source} ALMA${alma} CH$$_3$$OH
+xlim = -0.45 0.45 arcsec
+ylim = -60 -30 km/s
+hlines = -43.55 km/s
+rms = 1.7 mJy/beam
+vmax = 45 mJy/beam
+markers = 0.33 arcsec -39.7 km/s, -0.19 arcsec -48.5 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G333.46_alma1_pvmap_ch3cn]
+loc = 2 0
+source = G333.46-0.16
+alma = 1
+paval = 130
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra245.33407_dec-50.16288.PA${paval}.fits
+label = ${source} ALMA${alma} CH$$_3$$CN
+xlim = -0.45 0.45 arcsec
+ylim = -60 -30 km/s
+hlines = -43.55 km/s
+rms = 1.9 mJy/beam
+vmax = 45 mJy/beam
+markers = 0.33 arcsec -39.3 km/s, -0.21 arcsec -47.9 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G333.46-0.16_alma1_unrestricted_fit]
+loc = 1 0, 2 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.66389486517509
+model_x_0 = 0.034482758620689655
+model_alpha = 0.7755267109594368
+model_vsys = -43.61687521522653
+model_offset0 = 0.03230520378155113
+model_sd_amplitude = 1.3560665444672595
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.10959043390924572
+model_sd_vsys = 0.24914878882138244
+model_sd_offset0 = 0.009008858464710811
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
